[package]
name = "wkt"
description = "Rust read/write support for well-known text (WKT)"
version = "0.0.4"
authors = ["Corey Farwell <coreyf@rwell.org>"]
license = "Apache-2.0"
repository = "https://github.com/georust/rust-wkt"
build = "build.rs"

[dependencies]
geo = { version = "0.0.4", optional = true }
lalrpop-util = "0.11.0"

[build-dependencies]
lalrpop = "0.11.0"

[features]
default = ["geo-interop"]
geo-interop = ["geo"]
