[package]
name = "wkt"
description = "Rust read/write support for well-known text (WKT)"
version = "0.8.0"
authors = ["Corey Farwell <coreyf@rwell.org>", "Antoine Desbordes <antoine.desbordes@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/georust/wkt"
autobenches = true
readme = "README.md"
keywords = ["geo", "geospatial", "wkt"]

[dependencies]
geo-types = {version = "0.7", optional = true}
num-traits = "0.2"
thiserror = "1.0.23"

[dev-dependencies]
criterion = { version = "0.2" }

[features]
default = ["geo-types"]

[[bench]]
name = "parse"
harness = false

[patch.crates-io]
# This feature depends on an unmerged geo-types feature.
# Once (and if) that geo-types feature is released, we can merge this and bump
# the min version of geo-types required.
# That's a breaking change for wkt, but we already have an unreleased breaking
# change for WKT in the pipeline, so I'd recommend combinging them into one
# breaking WKT release.
geo-types = { git = "https://github.com/georust/geo", branch = "mkirk/pub-error" }
