[package]
name = "wkt"
description = "Rust read/write support for well-known text (WKT)"
version = "0.14.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/georust/wkt"
autobenches = true
readme = "README.md"
keywords = ["geo", "geospatial", "wkt"]
edition = "2021"

[dependencies]
geo-types = { version = "0.7.8", optional = true }
num-traits = "0.2"
serde = { version = "1.0", default-features = false, optional = true }
thiserror = "1.0.23"
log = "0.4.17"
geo-traits_0_2 = { package = "geo-traits", version = "0.2", optional = true }
geo-traits_0_3 = { package = "geo-traits", version = "0.3", optional = true }

[dev-dependencies]
criterion = "0.5.1"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"

[features]
default = ["geo-types"]
geo-traits_0_2 = ["dep:geo-traits_0_2"]
geo-traits_0_3 = ["dep:geo-traits_0_3"]

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "write"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
